Replace Project#owner with accountingGroup and add Role.MAINTAINER #218